deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    env: duarte
spec:
  replicas: 3
  selector:
    matchLabels:
      env: duarte
  template:
    metadata:
      labels:
        env: duarte
    spec:
      containers:
      - name: web-app
        image: deividdua32/web-app:latest
        ports:
        - containerPort: 80
