service_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: meu-servico
spec:
  type: ClusterIP
  selector:
    run: nginx
  ports:
  - port: 8080 # porta do servico
    targetPort: 80
