ing2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-app
  namespace: ms-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: app.dominio.com
    http:
      paths:
        - pathType: "Prefix"
          path: "/"
          backend:
            service:
              name: app
              port:
                number: 80
  tls:
  - hosts:
    - app.dominio.com
    secretName: nome-secrets # Insira o nome do secret que armazena o certificado
